--- a/package.json
+++ b/package.json
@@ -4,8 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "node src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint './src/**/*.js'",
+    "prepush": "npm run lint"
   },
   "author": "Mikhail Hatsilau",
-  "license": "ISC"
+  "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prepush"
+    }
+  },
+  "dependencies": {
+    "bcrypt": "^3.0.4",
+    "graphql-yoga": "^1.17.4",
+    "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.11",
+    "prisma-client-lib": "^1.26.5"
+  },
+  "devDependencies": {
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "husky": "^1.3.1"
+  }
 }
